--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="logo">
           <a href="">
             <img
-              src="ihc/LOGO_INCLUDER-removebg-preview (4).png"
+              src="Imágenes/LOGO_INCLUDER-removebg-preview (4).png"
               alt="Includer Logo"
             />
           </a>
