--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <div class="barra-superior">
       <span>ENCUÉNTRANOS EN</span>
       <div class="social-icons">
-        <a href="#"><img src="ihc/pngwing.com (5).png" alt="TikTok" /></a>
-        <a href="#"><img src="ihc/pngegg.png" alt="Facebook" /></a>
-        <a href="#"><img src="ihc/pngwing.com (6).png" alt="Instagram" /></a>
+        <a href="#"><img src="Imágenes/pngwing.com (5).png" alt="TikTok" /></a>
+        <a href="#"><img src="Imágenes/pngegg.png" alt="Facebook" /></a>
+        <a href="#"><img src="Imágenes/pngwing.com (6).png" alt="Instagram" /></a>
       </div>
     </div>
 
@@ -77,7 +77,7 @@
         </div>
         <div class="image">
           <img
-            src="ihc/pngwing.com (1).png"
+            src="Imágenes/pngwing.com (1).png"
             alt="Persona ayudando a un anciano en silla de ruedas"
           />
         </div>
@@ -94,7 +94,7 @@
     <div class="Container_SN">
       <ul class="Banner_SN">
         <li>
-          <img src="ihc\icons8-facebook-nuevo-48.png" width="32" height="32" />
+          <img src="Imágenes/icons8-facebook-nuevo-48.png" width="32" height="32" />
           <p>
             <a href="Pagina Oficial" target="_blank"
               >Danos un like<br />Facebook</a
@@ -102,7 +102,7 @@
           </p>
         </li>
         <li>
-          <img src="ihc\icons8-instagram-48.png" width="32" height="32" />
+          <img src="Imágenes/icons8-instagram-48.png" width="32" height="32" />
           <p>
             <a href="Pagina Oficial" target="_blank"
               >Danos un like<br />Instagram</a
@@ -110,13 +110,13 @@
           </p>
         </li>
         <li>
-          <img src="ihc\icons8-twitterx-50.png" width="32" height="32" />
+          <img src="Imágenes/icons8-twitterx-50.png" width="32" height="32" />
           <p>
             <a href="Pagina Oficial" target="_blank">Danos un like<br />X</a>
           </p>
         </li>
         <li>
-          <img src="ihc\icons8-tik-tok-48.png" width="32" height="32" />
+          <img src="Imágenes/icons8-tik-tok-48.png" width="32" height="32" />
           <p>
             <a href="Pagina Oficial" target="_blank"
               >Danos un like<br />TikTok</a
@@ -124,7 +124,7 @@
           </p>
         </li>
         <li>
-          <img src="ihc\icons8-youtube-48.png" width="32" height="32" />
+          <img src="Imágenes/icons8-youtube-48.png" width="32" height="32" />
           <p>
             <a href="Pagina Oficial" target="_blank"
               >Danos un like<br />Youtube</a
@@ -168,7 +168,7 @@
         </div>
         <div class="imagen">
           <img
-            src="ihc/PERSONA EN SILLA DE RUEDAS SUBIENDO RAMPA.jpg"
+            src="Imágenes/PERSONA EN SILLA DE RUEDAS SUBIENDO RAMPA.jpg"
             alt="Persona ayudando a un anciano en silla de ruedas"
           />
         </div>
@@ -192,7 +192,7 @@
         <div class="footer-column">
           <h3>
             <img
-              src="ihc/LOGO_INCLUDER-removebg-preview (4).png"
+              src="Imágenes/LOGO_INCLUDER-removebg-preview (4).png"
               alt="Logo Includer"
               style="width: 40px; vertical-align: middle; margin-right: 10px"
             />
