--- a/index.html
+++ b/index.html
@@ -37,23 +37,23 @@
           <div class="menu-explora">
             <a href="" class="btn-explora">EXPLORA</a>
             <div class="submenu">
-              <a href="MapaInteractivo\MapaInteractivo-HTML.html"
+              <a href="HTML\MapaInteractivo-HTML.html"
                 >Mapa Interactivo</a
               >
-              <a href="Recursos\Recursos-HTML.html">Recursos</a>
-              <a href="NuestrosServicios\NuestrosServicios-HTML.html"
+              <a href="HTML\Recursos-HTML.html">Recursos</a>
+              <a href="HTML\NuestrosServicios-HTML.html"
                 >Nuestros servicios</a
               >
-              <a href="SoporteTécnico\SoporteTécnico-HTML.html"
+              <a href="HTML\SoporteTécnico-HTML.html"
                 >Soporte técnico</a
               >
             </div>
           </div>
-          <a href="Contáctanos\Contáctanos-HTML.html" class="btn-contacto"
+          <a href="HTML\Contáctanos-HTML.html" class="btn-contacto"
             >CONTÁCTANOS</a
           >
           <a href="" class="btn-home">HOME</a>
-          <a href="IniciarSesión\IniciarSesión-HTML.html" class="btn-login"
+          <a href="HTML\IniciarSesión-HTML.html" class="btn-login"
             >INICIAR SESIÓN</a
           >
         </nav>
@@ -70,7 +70,7 @@
             reducir barreras y fomentar una mayor equidad en la movilidad de
             personas con discapacidades.
           </p>
-          <a href="CrearCuenta/CrearCuenta-HTML.html">
+          <a href="HTML/CrearCuenta-HTML.html">
             <button class="cta-button">CREAR CUENTA</button>
           </a>
           <h3>SOBRE LA APLICACIÓN</h3>
