--- a/HTML/MapaInteractivo-HTML.html
+++ b/HTML/MapaInteractivo-HTML.html
@@ -15,9 +15,9 @@
     <div class="barra-superior">
       <span>ENCUÉNTRANOS EN</span>
       <div class="social-icons">
-        <a href="#"><img src="\ihc\pngwing.com (5).png" alt="TikTok" /></a>
-        <a href="#"><img src="\ihc\pngegg.png" alt="Facebook" /></a>
-        <a href="#"><img src="\ihc\pngwing.com (6).png" alt="Instagram" /></a>
+        <a href="#"><img src="Imágenes/pngwing.com (5).png" alt="TikTok" /></a>
+        <a href="#"><img src="Imágenes/pngegg.png" alt="Facebook" /></a>
+        <a href="#"><img src="Imágenes/pngwing.com (6).png" alt="Instagram" /></a>
       </div>
     </div>
     <!-- Sección Principal -->
