--- a/HTML/MapaInteractivo-HTML.html
+++ b/HTML/MapaInteractivo-HTML.html
@@ -45,17 +45,17 @@
         <div class="divider"></div>
         <div class="right-content">
           <div class="image">
-            <img src="/ihc/mapa.jpeg" alt="mapa interactivo" />
+            <img src="Imágenes/mapa.jpeg" alt="mapa interactivo" />
           </div>
           <div class="Leyendas">
             <h2>LEYENDA</h2>
             <div class="iconos-l">
-              <a href="#"><img src="/ihc/rampa.png" alt="Rampas" />Rampas</a>
+              <a href="#"><img src="Imágenes/rampa.png" alt="Rampas" />Rampas</a>
               <a href="#"
-                ><img src="/ihc/ascensor.png" alt="Ascensores" />Ascensores</a
+                ><img src="Imágenes/ascensor.png" alt="Ascensores" />Ascensores</a
               >
-              <a href="#"><img src="/ihc/bano.png" alt="Baños" />Baños</a>
-              <a href="#"><img src="/ihc/autobus.png" alt="Buses" />Buses</a>
+              <a href="#"><img src="Imágenes/bano.png" alt="Baños" />Baños</a>
+              <a href="#"><img src="Imágenes/autobus.png" alt="Buses" />Buses</a>
             </div>
           </div>
         </div>
@@ -66,9 +66,9 @@
       <div class="footer-container">
         <div class="footer-column">
           <h3>  
-            <a href="https://42v538.csb.app/"">
+            <a href="index.html">
                 <img
-                  src="\ihc\LOGO_INCLUDER-removebg-preview (4).png"
+                  src="Imágenes\LOGO_INCLUDER-removebg-preview (4).png"
                   alt="Logo Includer"
                   style="width: 40px; vertical-align: middle; margin-right: 10px"
                 />
