--- a/HTML/NuestrosServicios-HTML.html
+++ b/HTML/NuestrosServicios-HTML.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Nuestros Servicios</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Literata:ital,opsz,wght@0,7..72,200..900;1,7..72,200..900&family=Luckiest+Guy&family=Neuton:ital,wght@0,200;0,300;0,400;0,700;0,800;1,400&family=Unbounded:wght@200..900&display=swap"
       rel="stylesheet"
@@ -14,9 +15,9 @@
     <div class="barra-superior">
       <span>ENCUÉNTRANOS EN</span>
       <div class="social-icons">
-        <a href="#"><img src="\ihc\pngwing.com (5).png" alt="TikTok" /></a>
-        <a href="#"><img src="\ihc\pngegg.png" alt="Facebook" /></a>
-        <a href="#"><img src="\ihc\pngwing.com (6).png" alt="Instagram" /></a>
+        <a href="#"><img src="Imágenes\pngwing.com (5).png" alt="TikTok" /></a>
+        <a href="#"><img src="Imágenes\pngegg.png" alt="Facebook" /></a>
+        <a href="#"><img src="Imágenes\pngwing.com (6).png" alt="Instagram" /></a>
       </div>
     </div>
     <section class="services">
@@ -70,9 +71,9 @@
       <div class="footer-container">
         <div class="footer-column">
           <h3>  
-            <a href="https://42v538.csb.app/"">
+            <a href="index.html"">
                 <img
-                  src="\ihc\LOGO_INCLUDER-removebg-preview (4).png"
+                  src="Imágenes\LOGO_INCLUDER-removebg-preview (4).png"
                   alt="Logo Includer"
                   style="width: 40px; vertical-align: middle; margin-right: 10px"
                 />
