--- a/HTML/SoporteTécnico-HTML.html
+++ b/HTML/SoporteTécnico-HTML.html
@@ -14,9 +14,9 @@
     <div class="barra-superior">
       <span>ENCUÉNTRANOS EN</span>
       <div class="social-icons">
-        <a href="#"><img src="\ihc\pngwing.com (5).png" alt="TikTok" /></a>
-        <a href="#"><img src="\ihc\pngegg.png" alt="Facebook" /></a>
-        <a href="#"><img src="\ihc\pngwing.com (6).png" alt="Instagram" /></a>
+        <a href="#"><img src="Imágenes\pngwing.com (5).png" alt="TikTok" /></a>
+        <a href="#"><img src="Imágenes\pngegg.png" alt="Facebook" /></a>
+        <a href="#"><img src="Imágenes\pngwing.com (6).png" alt="Instagram" /></a>
       </div>
     </div>
     <div class="container">
@@ -66,9 +66,9 @@
       <div class="footer-container">
         <div class="footer-column">
           <h3>  
-            <a href="https://42v538.csb.app/"">
+            <a href="index.html"">
                 <img
-                  src="\ihc\LOGO_INCLUDER-removebg-preview (4).png"
+                  src="Imágenes\LOGO_INCLUDER-removebg-preview (4).png"
                   alt="Logo Includer"
                   style="width: 40px; vertical-align: middle; margin-right: 10px"
                 />
