--- a/index.html
+++ b/index.html
@@ -177,11 +177,11 @@
     <section class="Nosotros-tabs">
       <div class="text-content">
         <div class="tabs">
-          <a href="MapaInteractivo\MapaInteractivo-HTML.html" class="tab"
+          <a href="HTML\MapaInteractivo-HTML.html" class="tab"
             >MAPA INTERACTIVO</a
           >
           <a href="" class="tab">EVALUACIONES</a>
-          <a href="Recursos\Recursos-HTML.html" class="tab">RECURSOS</a>
+          <a href="HTML\Recursos-HTML.html" class="tab">RECURSOS</a>
         </div>
         <h1>¡HACIA UNA MOVILIDAD SIN LÍMITES PARA TODAS LAS PERSONAS!</h1>
       </div>
