--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           sistema de evaluación por usuarios y guías de planificación urbana
           para fomentar espacios inclusivos.
         </p>
-        <a href="CrearCuenta\CrearCuenta-HTML.html" class="tab-serv"
+        <a href="HTML\CrearCuenta-HTML.html" class="tab-serv"
           >REGÍSTRATE</a
         >
       </div>
