--- a/HTML/Contáctanos-HTML.html
+++ b/HTML/Contáctanos-HTML.html
@@ -15,9 +15,9 @@
     <div class="barra-superior">
       <span>ENCUÉNTRANOS EN</span>
       <div class="social-icons">
-        <a href="#"><img src="Imágenes\pngwing.com (5).png" alt="TikTok" /></a>
-        <a href="#"><img src="Imágenes\pngegg.png" alt="Facebook" /></a>
-        <a href="#"><img src="Imágenes\pngwing.com (6).png" alt="Instagram" /></a>
+        <a href="#"><img src="../Imágenes\pngwing.com (5).png" alt="TikTok" /></a>
+        <a href="#"><img src="../Imágenes\pngegg.png" alt="Facebook" /></a>
+        <a href="#"><img src="../Imágenes\pngwing.com (6).png" alt="Instagram" /></a>
       </div>
     </div>
     <header>
@@ -25,7 +25,7 @@
         <div class="logo">
           <a href="index.html">
             <img
-              src="Imágenes\LOGO_INCLUDER-removebg-preview (4).png"
+              src="../Imágenes\LOGO_INCLUDER-removebg-preview (4).png"
               alt="Includer Logo"
             />
           </a>
@@ -176,7 +176,7 @@
           <h3>  
           <a href="index.html"">
               <img
-                src="Imágenes\LOGO_INCLUDER-removebg-preview (4).png"
+                src="../Imágenes\LOGO_INCLUDER-removebg-preview (4).png"
                 alt="Logo Includer"
                 style="width: 40px; vertical-align: middle; margin-right: 10px"
               />
