--- a/HTML/CrearCuenta-HTML.html
+++ b/HTML/CrearCuenta-HTML.html
@@ -8,16 +8,16 @@
       href="https://fonts.googleapis.com/css2?family=Literata:ital,opsz,wght@0,7..72,200..900;1,7..72,200..900&family=Luckiest+Guy&family=Neuton:ital,wght@0,200;0,300;0,400;0,700;0,800;1,400&family=Unbounded:wght@200..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="ESTILOS/CrearCuenta-CSS.css"/>
+    <link rel="stylesheet" href="../ESTILOS/CrearCuenta-CSS.css"/>
   </head>
   <body>
     <!-- Barra Superior -->
     <div class="barra-superior">
       <span>ENCUÉNTRANOS EN</span>
       <div class="social-icons">
-        <a href="#"><img src="Imágenes\pngwing.com (5).png" alt="TikTok" /></a>
-        <a href="#"><img src="Imágenes\pngegg.png" alt="Facebook" /></a>
-        <a href="#"><img src="Imágenes\pngwing.com (6).png" alt="Instagram" /></a>
+        <a href="#"><img src="../Imágenes\pngwing.com (5).png" alt="TikTok" /></a>
+        <a href="#"><img src="../Imágenes\pngegg.png" alt="Facebook" /></a>
+        <a href="#"><img src="../Imágenes\pngwing.com (6).png" alt="Instagram" /></a>
       </div>
     </div>
     <!-- Barra de Navegación -->
@@ -26,7 +26,7 @@
         <div class="logo">
             <a href="index.html">
                 <img
-                  src="Imágenes\LOGO_INCLUDER-removebg-preview (4).png"
+                  src="../Imágenes\LOGO_INCLUDER-removebg-preview (4).png"
                   alt="Includer Logo"
                 />
               </a>
@@ -66,8 +66,8 @@
           </form>
   
           <div class="illustrations">
-              <img src="Imágenes\PERSONA EN SILLA DE RUEDAS SUBIENDO RAMPA.jpg" alt="Ilustración izquierda" class="left-illustration">
-              <img src="Imágenes\PERSONA EN SILLA DE RUEDAS SUBIENDO RAMPA.jpg" alt="Ilustración derecha" class="right-illustration">
+              <img src="../Imágenes\PERSONA EN SILLA DE RUEDAS SUBIENDO RAMPA.jpg" alt="Ilustración izquierda" class="left-illustration">
+              <img src="../Imágenes\PERSONA EN SILLA DE RUEDAS SUBIENDO RAMPA.jpg" alt="Ilustración derecha" class="right-illustration">
           </div>
       </div>
   </body>
