--- a/HTML/IniciarSesión-HTML.html
+++ b/HTML/IniciarSesión-HTML.html
@@ -8,16 +8,16 @@
       href="https://fonts.googleapis.com/css2?family=Literata:ital,opsz,wght@0,7..72,200..900;1,7..72,200..900&family=Luckiest+Guy&family=Neuton:ital,wght@0,200;0,300;0,400;0,700;0,800;1,400&family=Unbounded:wght@200..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="ESTILOS/IniciarSesión-CSS.css"/>
+    <link rel="stylesheet" href="../ESTILOS/IniciarSesión-CSS.css"/>
   </head>
   <body>
     <!-- Barra Superior -->
     <div class="barra-superior">
       <span>ENCUÉNTRANOS EN</span>
       <div class="social-icons">
-        <a href="#"><img src="Imágenes\pngwing.com (5).png" alt="TikTok" /></a>
-        <a href="#"><img src="Imágenes\pngegg.png" alt="Facebook" /></a>
-        <a href="#"><img src="Imágenes\pngwing.com (6).png" alt="Instagram" /></a>
+        <a href="#"><img src="../Imágenes\pngwing.com (5).png" alt="TikTok" /></a>
+        <a href="#"><img src="../Imágenes\pngegg.png" alt="Facebook" /></a>
+        <a href="#"><img src="../Imágenes\pngwing.com (6).png" alt="Instagram" /></a>
       </div>
     </div>
     <!-- Barra de Navegación -->
@@ -26,7 +26,7 @@
         <div class="logo">
           <a href="index.html">
             <img
-              src="Imágenes\LOGO_INCLUDER-removebg-preview (4).png"
+              src="../Imágenes\LOGO_INCLUDER-removebg-preview (4).png"
               alt="Includer Logo"
             />
           </a>
@@ -40,7 +40,7 @@
     <!-- Sección Crear cuenta -->
     <div class="Inicio-sesion">
       <div id="INICIAR-SESION">
-        <img src="Imágenes\pngwing.com (8).png" alt="Persona" class="bienvenido" />
+        <img src="../Imágenes\pngwing.com (8).png" alt="Persona" class="bienvenido" />
         <h1>BIENVENIDO A INCLUDER</h1>
         <form class="form">
           <div class="input-group">
@@ -59,22 +59,22 @@
       <div class="Ingresa-con">
         <p class="login-text">O INGRESA CON</p>
         <div class="iconos-ingresa">
-          <img src="Imágenes\pngwing.com (7).png" alt="Google" class="ingresa-g" />
+          <img src="../Imágenes\pngwing.com (7).png" alt="Google" class="ingresa-g" />
           <img
-            src="Imágenes\pngwing.com (6).png"
+            src="../Imágenes\pngwing.com (6).png"
             alt="instagram"
             class="ingresa-ig"
           />
-          <img src="Imágenes\pngegg.png" alt="facebook" class="ingresa-fb" />
+          <img src="../Imágenes\pngegg.png" alt="facebook" class="ingresa-fb" />
         </div>
         <div class="illustrations">
           <img
-            src="Imágenes\PERSONA EN SILLA DE RUEDAS SUBIENDO RAMPA.jpg"
+            src="../Imágenes\PERSONA EN SILLA DE RUEDAS SUBIENDO RAMPA.jpg"
             alt="Ilustración izquierda"
             class="left-illustration"
           />
           <img
-            src="Imágenes\PERSONA EN SILLA DE RUEDAS SUBIENDO RAMPA.jpg"
+            src="../Imágenes\PERSONA EN SILLA DE RUEDAS SUBIENDO RAMPA.jpg"
             alt="Ilustración derecha"
             class="right-illustration"
           />
