--- a/HTML/MapaInteractivo-HTML.html
+++ b/HTML/MapaInteractivo-HTML.html
@@ -15,9 +15,9 @@
     <div class="barra-superior">
       <span>ENCUÉNTRANOS EN</span>
       <div class="social-icons">
-        <a href="#"><img src="Imágenes/pngwing.com (5).png" alt="TikTok" /></a>
-        <a href="#"><img src="Imágenes/pngegg.png" alt="Facebook" /></a>
-        <a href="#"><img src="Imágenes/pngwing.com (6).png" alt="Instagram" /></a>
+        <a href="#"><img src="../Imágenes/pngwing.com (5).png" alt="TikTok" /></a>
+        <a href="#"><img src="../Imágenes/pngegg.png" alt="Facebook" /></a>
+        <a href="#"><img src="../Imágenes/pngwing.com (6).png" alt="Instagram" /></a>
       </div>
     </div>
     <!-- Sección Principal -->
@@ -45,17 +45,17 @@
         <div class="divider"></div>
         <div class="right-content">
           <div class="image">
-            <img src="Imágenes/mapa.jpeg" alt="mapa interactivo" />
+            <img src="../Imágenes/mapa.jpeg" alt="mapa interactivo" />
           </div>
           <div class="Leyendas">
             <h2>LEYENDA</h2>
             <div class="iconos-l">
-              <a href="#"><img src="Imágenes/rampa.png" alt="Rampas" />Rampas</a>
+              <a href="#"><img src="../Imágenes/rampa.png" alt="Rampas" />Rampas</a>
               <a href="#"
-                ><img src="Imágenes/ascensor.png" alt="Ascensores" />Ascensores</a
+                ><img src="../Imágenes/ascensor.png" alt="Ascensores" />Ascensores</a
               >
-              <a href="#"><img src="Imágenes/bano.png" alt="Baños" />Baños</a>
-              <a href="#"><img src="Imágenes/autobus.png" alt="Buses" />Buses</a>
+              <a href="#"><img src="../Imágenes/bano.png" alt="Baños" />Baños</a>
+              <a href="#"><img src="../Imágenes/autobus.png" alt="Buses" />Buses</a>
             </div>
           </div>
         </div>
@@ -68,7 +68,7 @@
           <h3>  
             <a href="index.html">
                 <img
-                  src="Imágenes\LOGO_INCLUDER-removebg-preview (4).png"
+                  src="../Imágenes\LOGO_INCLUDER-removebg-preview (4).png"
                   alt="Logo Includer"
                   style="width: 40px; vertical-align: middle; margin-right: 10px"
                 />
