--- a/HTML/SoporteTécnico-HTML.html
+++ b/HTML/SoporteTécnico-HTML.html
@@ -8,15 +8,15 @@
       href="https://fonts.googleapis.com/css2?family=Literata:ital,opsz,wght@0,7..72,200..900;1,7..72,200..900&family=Luckiest+Guy&family=Neuton:ital,wght@0,200;0,300;0,400;0,700;0,800;1,400&family=Unbounded:wght@200..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="ESTILOS/SoporteTécnico-CSS.css" />
+    <link rel="stylesheet" href="../ESTILOS/SoporteTécnico-CSS.css" />
   </head>
   <body>
     <div class="barra-superior">
       <span>ENCUÉNTRANOS EN</span>
       <div class="social-icons">
-        <a href="#"><img src="Imágenes\pngwing.com (5).png" alt="TikTok" /></a>
-        <a href="#"><img src="Imágenes\pngegg.png" alt="Facebook" /></a>
-        <a href="#"><img src="Imágenes\pngwing.com (6).png" alt="Instagram" /></a>
+        <a href="#"><img src="../Imágenes\pngwing.com (5).png" alt="TikTok" /></a>
+        <a href="#"><img src="../Imágenes\pngegg.png" alt="Facebook" /></a>
+        <a href="#"><img src="../Imágenes\pngwing.com (6).png" alt="Instagram" /></a>
       </div>
     </div>
     <div class="container">
@@ -68,7 +68,7 @@
           <h3>  
             <a href="index.html"">
                 <img
-                  src="Imágenes\LOGO_INCLUDER-removebg-preview (4).png"
+                  src="../Imágenes\LOGO_INCLUDER-removebg-preview (4).png"
                   alt="Logo Includer"
                   style="width: 40px; vertical-align: middle; margin-right: 10px"
                 />
