--- a/HTML/Contáctanos-HTML.html
+++ b/HTML/Contáctanos-HTML.html
@@ -23,7 +23,7 @@
     <header>
       <div class="barra-navegacion">
         <div class="logo">
-          <a href="index.html">
+          <a href="../index.html">
             <img
               src="../Imágenes\LOGO_INCLUDER-removebg-preview (4).png"
               alt="Includer Logo"
@@ -32,9 +32,9 @@
           <h1>INCLUDER</h1>
         </div>
         <nav>
-          <a href="" class="btn-contacto">CONTÁCTANOS</a>
-          <a href="" class="btn-home">HOME</a>
-          <a href="" class="btn-login">INICIAR SESIÓN</a>
+          <a href="../HTML/Contáctanos.html" class="btn-contacto">CONTÁCTANOS</a>
+          <a href="../index.html" class="btn-home">HOME</a>
+          <a href="../HTML/IniciarSesión-HTML.html" class="btn-login">INICIAR SESIÓN</a>
         </nav>
       </div>
     </header>
@@ -174,7 +174,7 @@
       <div class="footer-container">
         <div class="footer-column">
           <h3>  
-          <a href="index.html"">
+          <a href="../index.html"">
               <img
                 src="../Imágenes\LOGO_INCLUDER-removebg-preview (4).png"
                 alt="Logo Includer"
