--- a/HTML/CrearCuenta-HTML.html
+++ b/HTML/CrearCuenta-HTML.html
@@ -24,7 +24,7 @@
     <header>
       <div class="barra-navegacion">
         <div class="logo">
-            <a href="index.html">
+            <a href="../index.html">
                 <img
                   src="../Imágenes\LOGO_INCLUDER-removebg-preview (4).png"
                   alt="Includer Logo"
