--- a/HTML/Recursos-HTML.html
+++ b/HTML/Recursos-HTML.html
@@ -71,7 +71,7 @@
     <div class="footer-container">
       <div class="footer-column">
         <h3>  
-          <a href="index.html"">
+          <a href="../index.html"">
               <img
                 src="../Imágenes\LOGO_INCLUDER-removebg-preview (4).png"
                 alt="Logo Includer"
