--- a/HTML/Evaluaciones-HTML.html
+++ b/HTML/Evaluaciones-HTML.html
@@ -8,17 +8,17 @@
       href="https://fonts.googleapis.com/css2?family=Literata:ital,opsz,wght@0,7..72,200..900;1,7..72,200..900&family=Luckiest+Guy&family=Neuton:ital,wght@0,200;0,300;0,400;0,700;0,800;1,400&family=Unbounded:wght@200..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="../ESTILOS/Evaluaciones-CSS.css" />
   </head>
   <body>
     <!-- Barra Superior -->
     <div class="barra-superior">
       <span>ENCUÉNTRANOS EN</span>
       <div class="social-icons">
-        <a href="#"><img src="imagenes/pngwing.com (5).png" alt="TikTok" /></a>
-        <a href="#"><img src="imagenes/pngegg.png" alt="Facebook" /></a>
+        <a href="#"><img src="../Imágenes/pngwing.com (5).png" alt="TikTok" /></a>
+        <a href="#"><img src="../Imágenes/pngegg.png" alt="Facebook" /></a>
         <a href="#"
-          ><img src="imagenes/pngwing.com (6).png" alt="Instagram"
+          ><img src="../Imágenes/pngwing.com (6).png" alt="Instagram"
         /></a>
       </div>
     </div>
@@ -34,7 +34,7 @@
             más inclusiva!
           </h2>
           <div class="foto-form">
-            <a href="#"><img src="imagenes/bloc.png" alt="formulario" /></a>
+            <a href="#"><img src="../Imágenes/bloc.png" alt="formulario" /></a>
           </div>
           <div class="parrafos-container">
             <p>
@@ -101,7 +101,7 @@
         <div class="footer-column">
           <h3>
             <img
-              src="imagenes/LOGO_INCLUDER-removebg-preview (4).png"
+              src="../Imágenes/LOGO_INCLUDER-removebg-preview (4).png"
               alt="Logo Includer"
               style="width: 40px; vertical-align: middle; margin-right: 10px"
             />
