--- a/HTML/Evaluaciones-HTML.html
+++ b/HTML/Evaluaciones-HTML.html
@@ -105,8 +105,7 @@
               alt="Logo Includer"
               style="width: 40px; vertical-align: middle; margin-right: 10px"
             />
-            INCLUDER
-          </h3>
+            INCLUDER</h3>
           <ul>
             <li><a href="#">Copyright © 2024 Includer.</a></li>
           </ul>
