--- a/HTML/Evaluaciones-HTML.html
+++ b/HTML/Evaluaciones-HTML.html
@@ -100,11 +100,13 @@
       <div class="footer-container">
         <div class="footer-column">
           <h3>
-            <img
-              src="../Imágenes/LOGO_INCLUDER-removebg-preview (4).png"
-              alt="Logo Includer"
-              style="width: 40px; vertical-align: middle; margin-right: 10px"
-            />
+            <a href="../index.html">
+                <img
+                  src="../Imágenes\LOGO_INCLUDER-removebg-preview (4).png"
+                  alt="Logo Includer"
+                  style="width: 40px; vertical-align: middle; margin-right: 10px"
+                />
+              </a>
             INCLUDER</h3>
           <ul>
             <li><a href="#">Copyright © 2024 Includer.</a></li>
