--- a/index.html
+++ b/index.html
@@ -38,15 +38,11 @@
             <a href="" class="btn-explora">EXPLORA</a>
             <div class="submenu">
               <a href="HTML\MapaInteractivo-HTML.html"
-                >Mapa Interactivo</a
-              >
+                >Mapa Interactivo</a>
               <a href="HTML\Recursos-HTML.html">Recursos</a>
-              <a href="HTML\NuestrosServicios-HTML.html"
-                >Nuestros servicios</a
-              >
-              <a href="HTML\SoporteTécnico-HTML.html"
-                >Soporte técnico</a
-              >
+              <a href="HTML\NuestrosServicios-HTML.html">Nuestros servicios</a>
+              <a href="HTML\Evaluaciones-HTML.html">Evaluaciones</a>
+              <a href="HTML\SoporteTécnico-HTML.html">Soporte técnico</a>
             </div>
           </div>
           <a href="HTML\Contáctanos-HTML.html" class="btn-contacto"
