--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <li>
           <img src="Imágenes/icons8-twitterx-50.png" width="36" height="36" />
           <p>
-            <a href="Pagina Oficial" target="_blank">Danos un like<br />X</a>
+            <a href="Pagina Oficial" target="_blank">Danos un like<br />Twitter X</a>
           </p>
         </li>
         <li>
