--- a/HTML/CrearCuenta-HTML.html
+++ b/HTML/CrearCuenta-HTML.html
@@ -8,67 +8,104 @@
       href="https://fonts.googleapis.com/css2?family=Literata:ital,opsz,wght@0,7..72,200..900;1,7..72,200..900&family=Luckiest+Guy&family=Neuton:ital,wght@0,200;0,300;0,400;0,700;0,800;1,400&family=Unbounded:wght@200..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../ESTILOS/CrearCuenta-CSS.css"/>
+    <link rel="stylesheet" href="CrearCuenta-CSS.css" />
   </head>
   <body>
     <!-- Barra Superior -->
     <div class="barra-superior">
       <span>ENCUÉNTRANOS EN</span>
       <div class="social-icons">
-        <a href="#"><img src="../Imágenes\pngwing.com (5).png" alt="TikTok" /></a>
-        <a href="#"><img src="../Imágenes\pngegg.png" alt="Facebook" /></a>
-        <a href="#"><img src="../Imágenes\pngwing.com (6).png" alt="Instagram" /></a>
+        <a href="#"><img src="\ihc\pngwing.com (5).png" alt="TikTok" /></a>
+        <a href="#"><img src="\ihc\pngegg.png" alt="Facebook" /></a>
+        <a href="#"><img src="\ihc\pngwing.com (6).png" alt="Instagram" /></a>
       </div>
     </div>
     <!-- Barra de Navegación -->
     <header>
       <div class="barra-navegacion">
         <div class="logo">
-            <a href="../index.html">
-                <img
-                  src="../Imágenes\LOGO_INCLUDER-removebg-preview (4).png"
-                  alt="Includer Logo"
-                />
-              </a>
+          <a href="https://42v538.csb.app/">
+            <img
+              src="\ihc\LOGO_INCLUDER-removebg-preview (4).png"
+              alt="Includer Logo"
+            />
+          </a>
           <h1>INCLUDER</h1>
         </div>
         <nav>
-          <a href="IniciarSesión-HTML.html" class="btn-login">INICIAR SESIÓN</a>
+          <a
+            href="https://42v538.csb.app/IniciarSesi%C3%B3n/IniciarSesi%C3%B3n-HTML.html"
+            class="btn-login"
+            >INICIAR SESIÓN</a
+          >
         </nav>
       </div>
     </header>
-    <!-- Sección Crear cuenta -->
-        <div class="Crear-cnt">
-          <div id="CREAR-CUENTA">
-          <h1>BIENVENIDO A INCLUDER</h1>
-          <p class="subtitle">CREA UNA CUENTA</p>
-            <form class="form">
-              <div class="input-group">
-                  <label for="name">APELLIDOS Y NOMBRES 👤</label>
-                  <input type="text" id="name">
-              </div>
-              <div class="input-group">
-                  <label for="email">EMAIL ✉️</label>
-                  <input type="email" id="email">
-              </div>
-              <div class="input-group">
-                  <label for="phone">CELULAR 📞</label>
-                  <input type="text" id="phone">
-              </div>
-              <div class="input-group">
-                  <label for="password">CONTRASEÑA 👁️</label>
-                  <input type="password" id="password">
-              </div>
-  
-              <button type="submit" class="btn-primary">CREAR CUENTA</button>
-              <p class="login-text">¿Ya tienes una cuenta?</p>
-              <button type="submit" class="btn-secondary">INICIAR SESIÓN</button>
-          </form>
-  
-          <div class="illustrations">
-              <img src="../Imágenes\PERSONA EN SILLA DE RUEDAS SUBIENDO RAMPA.jpg" alt="Ilustración izquierda" class="left-illustration">
-              <img src="../Imágenes\PERSONA EN SILLA DE RUEDAS SUBIENDO RAMPA.jpg" alt="Ilustración derecha" class="right-illustration">
+   <!-- Sección Crear cuenta -->
+<!-- Sección Crear cuenta -->
+<div class="Crear-cnt">
+  <div id="CREAR-CUENTA">
+    <h1>BIENVENIDO A INCLUDER</h1>
+    <p class="subtitle">CREA UNA CUENTA</p>
+    <div class="input-group">
+      <form name="frm" method="post" action="">
+        <fieldset id="form">
+          <div class="form-row">
+            <!-- Columna 1 (Apellidos y Nombres) -->
+            <div class="form-column">
+              <label>APELLIDOS Y NOMBRES 👤</label>
+              <input type="text" name="fname" size="15" />
+            </div>
+            <!-- Columna 2 (Celular) -->
+            <div class="form-column">
+              <label>CELULAR 📞</label>
+              <input type="text" name="fphone" size="15" />
+            </div>
           </div>
+          
+          <div class="form-row">
+            <!-- Columna 3 (Email) -->
+            <div class="form-column">
+              <label>EMAIL ✉️</label>
+              <input type="text" name="femail" size="15" />
+            </div>
+            <!-- Columna 4 (Contraseña) -->
+            <div class="form-column">
+              <label>CONTRASEÑA 👁️</label>
+              <input type="text" name="fpassword" size="15" />
+            </div>
+          </div>
+
+          <!-- Contenedor de los botones dentro del fieldset -->
+          <div class="form-actions">
+            <input type="submit" class="btn-primary" value="CREAR CUENTA" />
+            <p class="login-text">¿Ya tienes una cuenta?</p>
+            <input type="button" class="btn-secondary" value="INICIAR SESIÓN" onclick="window.location.href='https://42v538.csb.app/IniciarSesi%C3%B3n/IniciarSesi%C3%B3n-HTML.html'" />
+          </div>
+        </fieldset>
+      </form>
+    </div>
+  </div>
+</div>
+      </form>
+    </div>
+  </div>
+</div>
+
+        <div class="illustrations">
+          <img
+            src="\ihc\PERSONA EN SILLA DE RUEDAS SUBIENDO RAMPA.jpg"
+            alt="Ilustración izquierda"
+            class="left-illustration"
+          />
+          <img
+            src="\ihc\PERSONA EN SILLA DE RUEDAS SUBIENDO RAMPA.jpg"
+            alt="Ilustración derecha"
+            class="right-illustration"
+          />
+        </div>
       </div>
+    </div>
   </body>
+  <script src="CrearCuenta-JS.js"></script>
 </html>
