--- a/HTML/Contáctanos-HTML.html
+++ b/HTML/Contáctanos-HTML.html
@@ -215,5 +215,5 @@
       </div>
     </footer>
   </body>
-  <script src="main.js"> </script>
+  <script src="JavaScript/main.js"> </script>
 </html>
