--- a/HTML/Evaluaciones-HTML.html
+++ b/HTML/Evaluaciones-HTML.html
@@ -142,5 +142,5 @@
       </div>
     </footer>
   </body>
-  <script src="form.js"></script>
+  <script src="JavaScript/form.js"></script>
 </html>
