--- a/HTML/IniciarSesión-HTML.html
+++ b/HTML/IniciarSesión-HTML.html
@@ -84,5 +84,5 @@
       </div>
     </div>
   </body>
-  <script src="JavaScript/IniciarSesión-JS.js"></script>
+  <script src="IniciarSesión-JS.js"></script>
 </html>
