--- a/index.html
+++ b/index.html
@@ -228,4 +228,8 @@
       </div>
     </footer>
   </body>
+  <script src="JavaScript/main.js"> </script>
+  <script src="JavaScript/form.js"> </script>
+  <script src="JavaScript/CrearCuenta-JS.js"> </script>
+  <script src="JavaScript/IniciarSesión-JS.js"> </script>
 </html>
