--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
           <a href="HTML\MapaInteractivo-HTML.html" class="tab"
             >MAPA INTERACTIVO</a
           >
-          <a href="" class="tab">EVALUACIONES</a>
+          <a href="HTML\Evaluaciones-HTML.html" class="tab">EVALUACIONES</a>
           <a href="HTML\Recursos-HTML.html" class="tab">RECURSOS</a>
         </div>
         <h1>¡HACIA UNA MOVILIDAD SIN LÍMITES PARA TODAS LAS PERSONAS!</h1>
