--- a/HTML/Contáctanos-HTML.html
+++ b/HTML/Contáctanos-HTML.html
@@ -9,15 +9,15 @@
       href="https://fonts.googleapis.com/css2?family=Literata:ital,opsz,wght@0,7..72,200..900;1,7..72,200..900&family=Luckiest+Guy&family=Neuton:ital,wght@0,200;0,300;0,400;0,700;0,800;1,400&family=Unbounded:wght@200..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="Contáctanos-CSS.css" />
+    <link rel="stylesheet" href="../ESTILOS/Contáctanos-CSS.css" />
   </head>
   <body>
     <div class="barra-superior">
       <span>ENCUÉNTRANOS EN</span>
       <div class="social-icons">
-        <a href="#"><img src="\ihc\pngwing.com (5).png" alt="TikTok" /></a>
-        <a href="#"><img src="\ihc\pngegg.png" alt="Facebook" /></a>
-        <a href="#"><img src="\ihc\pngwing.com (6).png" alt="Instagram" /></a>
+        <a href="#"><img src="../Imágenes/pngwing.com (5).png" alt="TikTok" /></a>
+        <a href="#"><img src="../Imágenes/pngegg.png" alt="Facebook" /></a>
+        <a href="#"><img src="../Imágenes/pngwing.com (6).png" alt="Instagram" /></a>
       </div>
     </div>
     <header>
@@ -25,7 +25,7 @@
         <div class="logo">
           <a href="https://42v538.csb.app/">
             <img
-              src="\ihc\LOGO_INCLUDER-removebg-preview (4).png"
+              src="../Imágenes/LOGO_INCLUDER-removebg-preview (4).png"
               alt="Includer Logo"
             />
           </a>
@@ -176,7 +176,7 @@
           <h3>  
           <a href="https://42v538.csb.app/"">
               <img
-                src="\ihc\LOGO_INCLUDER-removebg-preview (4).png"
+                src="../Imágenes/LOGO_INCLUDER-removebg-preview (4).png"
                 alt="Logo Includer"
                 style="width: 40px; vertical-align: middle; margin-right: 10px"
               />
@@ -215,5 +215,5 @@
       </div>
     </footer>
   </body>
-  <script src="main.js"> </script>
+  <script src="../JavaScript/main.js"> </script>
 </html>
