--- a/HTML/Evaluaciones-HTML.html
+++ b/HTML/Evaluaciones-HTML.html
@@ -141,5 +141,5 @@
       </div>
     </footer>
   </body>
-  <script src="form.js"></script>
+  <script src="../JavaScript/form.js"></script>
 </html>
