CrearCuenta-HTML.html

--- a/HTML/CrearCuenta-HTML.html
+++ b/HTML/CrearCuenta-HTML.html
@@ -107,5 +107,5 @@
       </div>
     </div>
   </body>
-  <script src="CrearCuenta-JS.js"></script>
+  <script src="../JavaScript/CrearCuenta-JS.js"></script>
 </html>
