IniciarSesión-HTML.html

--- a/HTML/IniciarSesión-HTML.html
+++ b/HTML/IniciarSesión-HTML.html
@@ -15,9 +15,9 @@
     <div class="barra-superior">
       <span>ENCUÉNTRANOS EN</span>
       <div class="social-icons">
-        <a href="#"><img src="\ihc\pngwing.com (5).png" alt="TikTok" /></a>
-        <a href="#"><img src="\ihc\pngegg.png" alt="Facebook" /></a>
-        <a href="#"><img src="\ihc\pngwing.com (6).png" alt="Instagram" /></a>
+        <a href="#"><img src="../Imágenes/pngwing.com (5).png" alt="TikTok" /></a>
+        <a href="#"><img src="../Imágenes/pngegg.png" alt="Facebook" /></a>
+        <a href="#"><img src="../Imágenes/pngwing.com (6).png" alt="Instagram" /></a>
       </div>
     </div>
     <!-- Barra de Navegación -->
@@ -25,7 +25,7 @@
       <div class="barra-navegacion">
         <div class="logo">
           <img
-            src="\ihc\LOGO_INCLUDER-removebg-preview (4).png"
+            src="../Imágenes/LOGO_INCLUDER-removebg-preview (4).png"
             alt="Includer Logo"
           />
           <h1>INCLUDER</h1>
@@ -38,7 +38,7 @@
     <!-- Sección Iniciar sesion -->
     <div class="Inicio-sesion">
       <div id="INICIAR-SESION">
-        <img src="\ihc\pngwing.com (8).png" alt="Persona" class="bienvenido" />
+        <img src="../Imágenes/pngwing.com (8).png" alt="Persona" class="bienvenido" />
         <h1>BIENVENIDO A INCLUDER</h1>
         <div class="input-group">
           <form name="frm" method="post" action="">
@@ -61,22 +61,22 @@
       <div class="Ingresa-con">
         <p class="login-text">O INGRESA CON</p>
         <div class="iconos-ingresa">
-          <img src="\ihc\pngwing.com (7).png" alt="Google" class="ingresa-g" />
+          <img src="../Imágenes/pngwing.com (7).png" alt="Google" class="ingresa-g" />
           <img
-            src="\ihc\pngwing.com (6).png"
+            src="../Imágenes/pngwing.com (6).png"
             alt="instagram"
             class="ingresa-ig"
           />
-          <img src="\ihc\pngegg.png" alt="facebook" class="ingresa-fb" />
+          <img src="../Imágenes/pngegg.png" alt="facebook" class="ingresa-fb" />
         </div>
         <div class="illustrations">
           <img
-            src="\ihc\PERSONA EN SILLA DE RUEDAS SUBIENDO RAMPA.jpg"
+            src="../Imágenes/PERSONA EN SILLA DE RUEDAS SUBIENDO RAMPA.jpg"
             alt="Ilustración izquierda"
             class="left-illustration"
           />
           <img
-            src="\ihc\PERSONA EN SILLA DE RUEDAS SUBIENDO RAMPA.jpg"
+            src="../Imágenes/PERSONA EN SILLA DE RUEDAS SUBIENDO RAMPA.jpg"
             alt="Ilustración derecha"
             class="right-illustration"
           />
