--- a/HTML/CrearCuenta-HTML.html
+++ b/HTML/CrearCuenta-HTML.html
@@ -15,9 +15,9 @@
     <div class="barra-superior">
       <span>ENCUÉNTRANOS EN</span>
       <div class="social-icons">
-        <a href="#"><img src="\ihc\pngwing.com (5).png" alt="TikTok" /></a>
-        <a href="#"><img src="\ihc\pngegg.png" alt="Facebook" /></a>
-        <a href="#"><img src="\ihc\pngwing.com (6).png" alt="Instagram" /></a>
+        <a href="#"><img src="../Imágenes/pngwing.com (5).png" alt="TikTok" /></a>
+        <a href="#"><img src="../Imágenes/pngegg.png" alt="Facebook" /></a>
+        <a href="#"><img src="../Imágenes/pngwing.com (6).png" alt="Instagram" /></a>
       </div>
     </div>
     <!-- Barra de Navegación -->
@@ -26,7 +26,7 @@
         <div class="logo">
           <a href="https://42v538.csb.app/">
             <img
-              src="\ihc\LOGO_INCLUDER-removebg-preview (4).png"
+              src="../Imágenes/LOGO_INCLUDER-removebg-preview (4).png"
               alt="Includer Logo"
             />
           </a>
@@ -94,12 +94,12 @@
 
         <div class="illustrations">
           <img
-            src="\ihc\PERSONA EN SILLA DE RUEDAS SUBIENDO RAMPA.jpg"
+            src="../Imágenes/PERSONA EN SILLA DE RUEDAS SUBIENDO RAMPA.jpg"
             alt="Ilustración izquierda"
             class="left-illustration"
           />
           <img
-            src="\ihc\PERSONA EN SILLA DE RUEDAS SUBIENDO RAMPA.jpg"
+            src="../Imágenes/PERSONA EN SILLA DE RUEDAS SUBIENDO RAMPA.jpg"
             alt="Ilustración derecha"
             class="right-illustration"
           />
