--- a/HTML/IniciarSesión-HTML.html
+++ b/HTML/IniciarSesión-HTML.html
@@ -24,10 +24,12 @@
     <header>
       <div class="barra-navegacion">
         <div class="logo">
-          <img
-            src="../Imágenes/LOGO_INCLUDER-removebg-preview (4).png"
-            alt="Includer Logo"
-          />
+          <a href="">
+            <img
+              src="Imágenes/LOGO_INCLUDER-removebg-preview (4).png"
+              alt="Includer Logo"
+            />
+          </a>
           <h1>INCLUDER</h1>
         </div>
         <nav>
