--- a/HTML/IniciarSesión-HTML.html
+++ b/HTML/IniciarSesión-HTML.html
@@ -26,7 +26,7 @@
         <div class="logo">
           <a href="">
             <img
-              src="Imágenes/LOGO_INCLUDER-removebg-preview (4).png"
+              src="../Imágenes/LOGO_INCLUDER-removebg-preview (4).png"
               alt="Includer Logo"
             />
           </a>
