--- a/HTML/Contáctanos-HTML.html
+++ b/HTML/Contáctanos-HTML.html
@@ -23,7 +23,7 @@
     <header>
       <div class="barra-navegacion">
         <div class="logo">
-          <a href="https://42v538.csb.app/">
+          <a href="../index.html">
             <img
               src="../Imágenes/LOGO_INCLUDER-removebg-preview (4).png"
               alt="Includer Logo"
@@ -174,7 +174,7 @@
       <div class="footer-container">
         <div class="footer-column">
           <h3>  
-          <a href="https://42v538.csb.app/"">
+          <a href="../index.html">
               <img
                 src="../Imágenes/LOGO_INCLUDER-removebg-preview (4).png"
                 alt="Logo Includer"
