--- a/HTML/Recursos-HTML.html
+++ b/HTML/Recursos-HTML.html
@@ -8,6 +8,7 @@
       href="https://fonts.googleapis.com/css2?family=Literata:ital,opsz,wght@0,7..72,200..900;1,7..72,200..900&family=Luckiest+Guy&family=Neuton:ital,wght@0,200;0,300;0,400;0,700;0,800;1,400&family=Unbounded:wght@200..900&display=swap"
       rel="stylesheet"
     />
+    <link rel="shortcut icon" href="../Favicon.ico" type="image/x-icon"/>
     <link rel="stylesheet" href="../ESTILOS/Recursos-CSS.css" />
   </head>
   <body>
