--- a/HTML/CrearCuenta-HTML.html
+++ b/HTML/CrearCuenta-HTML.html
@@ -35,7 +35,7 @@
         </div>
         <nav>
           <a
-            href="https://42v538.csb.app/IniciarSesi%C3%B3n/IniciarSesi%C3%B3n-HTML.html"
+            href=""IniciarSesión-HTML.html""
             class="btn-login"
             >INICIAR SESIÓN</a
           >
@@ -81,7 +81,7 @@
           <div class="form-actions">
             <input type="submit" class="btn-primary" value="CREAR CUENTA" />
             <p class="login-text">¿Ya tienes una cuenta?</p>
-            <input type="button" class="btn-secondary" value="INICIAR SESIÓN" onclick="window.location.href='https://42v538.csb.app/IniciarSesi%C3%B3n/IniciarSesi%C3%B3n-HTML.html'" />
+            <input type="button" class="btn-secondary" value="INICIAR SESIÓN" onclick="window.location.href="IniciarSesión-HTML.html" />
           </div>
         </fieldset>
       </form>
