--- a/HTML/Contáctanos-HTML.html
+++ b/HTML/Contáctanos-HTML.html
@@ -33,9 +33,9 @@
           <h1>INCLUDER</h1>
         </div>
         <nav>
-          <a href="" class="btn-contacto">CONTÁCTANOS</a>
-          <a href="" class="btn-home">HOME</a>
-          <a href="" class="btn-login">INICIAR SESIÓN</a>
+          <a href=""Contáctanos-HTML.html"" class="btn-contacto">CONTÁCTANOS</a>
+          <a href="../index.html" class="btn-home">HOME</a>
+          <a href=""IniciarSesión-HTML.html"" class="btn-login">INICIAR SESIÓN</a>
         </nav>
       </div>
     </header>
