--- a/HTML/CrearCuenta-HTML.html
+++ b/HTML/CrearCuenta-HTML.html
@@ -81,7 +81,7 @@
           <div class="form-actions">
             <input type="submit" class="btn-primary" value="CREAR CUENTA" />
             <p class="login-text">¿Ya tienes una cuenta?</p>
-            <input type="button" class="btn-secondary" value="INICIAR SESIÓN" onclick="window.location.href="IniciarSesión-HTML.html" />
+            <input type="button" class="btn-secondary" value="INICIAR SESIÓN" onclick="window.location.href='IniciarSesión-HTML.html'" />
           </div>
         </fieldset>
       </form>
