--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <div class="TABS">
         <a href="#Servicios-Includer" class="tab">SERVICIOS</a>
         <a href="#Nosotros-Includer" class="tab">NOSOTROS</a>
-        <a href="SoporteTécnico\SoporteTécnico-HTML.html" class="tab"
+        <a href="HTML\SoporteTécnico-HTML.html" class="tab"
           >SOPORTE</a
         >
       </div>
