--- a/HTML/CrearCuenta-HTML.html
+++ b/HTML/CrearCuenta-HTML.html
@@ -35,7 +35,7 @@
         </div>
         <nav>
           <a
-            href=""IniciarSesión-HTML.html""
+            href="IniciarSesión-HTML.html"
             class="btn-login"
             >INICIAR SESIÓN</a
           >
