--- a/Public/Archivos.html/Contáctanos-HTML.html
+++ b/Public/Archivos.html/Contáctanos-HTML.html
@@ -10,15 +10,15 @@
       rel="stylesheet"
     />
     <link rel="shortcut icon" href="../Favicon.ico" type="image/x-icon"/>
-    <link rel="stylesheet" href="../ESTILOS/Contáctanos-CSS.css" />
+    <link rel="stylesheet" href="../Assets/Styles/Contáctanos-CSS.css" />
   </head>
   <body>
     <div class="barra-superior">
       <span>ENCUÉNTRANOS EN</span>
       <div class="social-icons">
-        <a href="#"><img src="../Imágenes/pngwing.com (5).png" alt="TikTok" /></a>
-        <a href="#"><img src="../Imágenes/pngegg.png" alt="Facebook" /></a>
-        <a href="#"><img src="../Imágenes/pngwing.com (6).png" alt="Instagram" /></a>
+        <a href="#"><img src="../Assets/Images/pngwing.com (5).png" alt="TikTok" /></a>
+        <a href="#"><img src="../Assets/Images/pngegg.png" alt="Facebook" /></a>
+        <a href="#"><img src="../Assets/Images/pngwing.com (6).png" alt="Instagram" /></a>
       </div>
     </div>
     <header>
