--- a/Public/Archivos.html/Contáctanos-HTML.html
+++ b/Public/Archivos.html/Contáctanos-HTML.html
@@ -26,7 +26,7 @@
         <div class="logo">
           <a href="../index.html">
             <img
-              src="../Imágenes/LOGO_INCLUDER-removebg-preview (4).png"
+              src="../Assets/Images/LOGO_INCLUDER-removebg-preview (4).png"
               alt="Includer Logo"
             />
           </a>
@@ -216,5 +216,5 @@
       </div>
     </footer>
   </body>
-  <script src="../JavaScript/main.js"> </script>
+  <script src="../Assets/Scripts/main.js"> </script>
 </html>
