--- a/Public/Archivos.html/Evaluaciones-HTML.html
+++ b/Public/Archivos.html/Evaluaciones-HTML.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
     />
     <link rel="shortcut icon" href="../Favicon.ico" type="image/x-icon"/>
-    <link rel="stylesheet" href="../ESTILOS/Evaluaciones-CSS.css" />
+    <link rel="stylesheet" href="../Assets/Styles/Archivos.css/Evaluaciones-CSS.css" />
   </head>
   <body>
     <!-- Barra Superior -->
