--- a/Public/Archivos.html/Contáctanos-HTML.html
+++ b/Public/Archivos.html/Contáctanos-HTML.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <link rel="shortcut icon" href="../Favicon.ico" type="image/x-icon"/>
-    <link rel="stylesheet" href="../Assets/Styles/Contáctanos-CSS.css" />
+    <link rel="stylesheet" href="../Assets/Styles/Archivos.css/Contáctanos-CSS.css" />
   </head>
   <body>
     <div class="barra-superior">
