--- a/Public/Archivos.html/Evaluaciones-HTML.html
+++ b/Public/Archivos.html/Evaluaciones-HTML.html
@@ -16,10 +16,10 @@
     <div class="barra-superior">
       <span>ENCUÉNTRANOS EN</span>
       <div class="social-icons">
-        <a href="#"><img src="../Imágenes/pngwing.com (5).png" alt="TikTok" /></a>
-        <a href="#"><img src="../Imágenes/pngegg.png" alt="Facebook" /></a>
+        <a href="#"><img src="../Assets/Images/pngwing.com (5).png" alt="TikTok" /></a>
+        <a href="#"><img src="../Assets/Images/pngegg.png" alt="Facebook" /></a>
         <a href="#"
-          ><img src="../Imágenes/pngwing.com (6).png" alt="Instagram"
+          ><img src="../Assets/Images/pngwing.com (6).png" alt="Instagram"
         /></a>
       </div>
     </div>
@@ -35,7 +35,7 @@
             más inclusiva!
           </h2>
           <div class="foto-form">
-            <a href="#"><img src="../Imágenes/bloc.png" alt="formulario" /></a>
+            <a href="#"><img src="../Assets/Images/bloc.png" alt="formulario" /></a>
           </div>
           <div class="parrafos-container">
             <p>
@@ -103,7 +103,7 @@
           <h3>
             <a href="../index.html">
                 <img
-                  src="../Imágenes\LOGO_INCLUDER-removebg-preview (4).png"
+                  src="..Assets/Images/LOGO_INCLUDER-removebg-preview (4).png"
                   alt="Logo Includer"
                   style="width: 40px; vertical-align: middle; margin-right: 10px"
                 />
@@ -142,5 +142,5 @@
       </div>
     </footer>
   </body>
-  <script src="../JavaScript/form.js"></script>
+  <script src="../Assets/Scripts/Archivos.js/form.js"></script>
 </html>
