--- a/Public/Archivos.html/Recursos-HTML.html
+++ b/Public/Archivos.html/Recursos-HTML.html
@@ -9,16 +9,16 @@
       rel="stylesheet"
     />
     <link rel="shortcut icon" href="../Favicon.ico" type="image/x-icon"/>
-    <link rel="stylesheet" href="../ESTILOS/Recursos-CSS.css" />
+    <link rel="stylesheet" href="../Assets/Styles/Archivos.css/Recursos-CSS.css" />
   </head>
   <body>
     <!-- Header Bar -->
     <div class="barra-superior">
       <span>ENCUÉNTRANOS EN</span>
       <div class="social-icons">
-        <a href="#"><img src="../Imágenes\pngwing.com (5).png" alt="TikTok" /></a>
-        <a href="#"><img src="../Imágenes\pngegg.png" alt="Facebook" /></a>
-        <a href="#"><img src="../Imágenes\pngwing.com (6).png" alt="Instagram" /></a>
+        <a href="#"><img src="../Assets/Images/pngwing.com (5).png" alt="TikTok" /></a>
+        <a href="#"><img src="../Assets/Images/pngegg.png" alt="Facebook" /></a>
+        <a href="#"><img src="../Assets/Images/pngwing.com (6).png" alt="Instagram" /></a>
       </div>
     </div>
 
@@ -61,7 +61,7 @@
           <li>Accesibilidad en el transporte público ▶</li>
         </ul>
         <div class="recur-img">
-        <a href="#"><img src="../Imágenes\discapacitados (1).png" alt="Discapacitados conversando" /></a>
+        <a href="#"><img src="../Assets/Images/discapacitados (1).png" alt="Discapacitados conversando" /></a>
       </div>
       </div>
     </div>
@@ -74,7 +74,7 @@
         <h3>  
           <a href="../index.html"">
               <img
-                src="../Imágenes\LOGO_INCLUDER-removebg-preview (4).png"
+                src="../Assets/Images/LOGO_INCLUDER-removebg-preview (4).png"
                 alt="Logo Includer"
                 style="width: 40px; vertical-align: middle; margin-right: 10px"
               />
